# mustard

./: README.md
mustard/: CMakeLists.txt  Makefile  cholesky_mustard.cu  env.sh  lu_mustard.cu  lu_mustard_p.cu  lu_mustard_test.cu  mustard.h  save_lu_mustard_p.cu  wtf_log.txt
scripts/: chol_all.sh  lu_all.sh  plot.py
src/baselines/cholesky/MgPotrf/: cusolver_MgPotrf_example1.cu
src/baselines/cusolver_Mg/: cusolver_MgGetrf_example.cu
src/baselines/lu/MgGetrf/: cusolver_MgGetrf_example.cu
src/baselines/starpu/lu/: Makefile
src/include/: utils.h
src/mustard/: Makefile  cholesky_partg_occupancy_nvshmem.cu  lu_partg_fuse.cu  mustard.h
src/res/: .gitignore  calc.py  chol_all.sh  lu_all.sh  plot.py
src/res/old_scripts/: collect4.sh  collect8.sh
